--- a/NM_History/The Zimmerman Telegram/The Zimmerman Telegram.tex
+++ b/NM_History/The Zimmerman Telegram/The Zimmerman Telegram.tex
@@ -5,7 +5,6 @@
 \usepackage[american]{babel} 
 \usepackage{csquotes} 
 \usepackage[style=mla-new]{biblatex}
-\usepackage{filecontents}
 \usepackage[margin=1in]{geometry}
 
 \begin{filecontents}{bib.bib}
@@ -35,7 +34,8 @@
 \date{\today}
 \PutTitle{New Mexico History Period 4}
 
-\autocite{ZimmermanTelegram}
+As Test Subject \#1 says, ``Hello''\autocite{ZimmermanTelegram}\\
+as;dlfk jas;fl jas;flkj aslkfjas lk;dfj
 
 \pagestyle{headings}
 \newpage
