Test without a subscription #1

--- a/NM_History/The Zimmerman Telegram/The Zimmerman Telegram.tex
+++ b/NM_History/The Zimmerman Telegram/The Zimmerman Telegram.tex
@@ -30,12 +30,10 @@
 
 \begin{document}
 \title{The Zimmerman Telegram}
-\author{Jonah Mondragon}
 \date{\today}
 \PutTitle{New Mexico History Period 4}
 
-As Test Subject \#1 says, ``Hello''\autocite{ZimmermanTelegram}\\
-as;dlfk jas;fl jas;flkj aslkfjas lk;dfj
+As Test Subject \#1 says, ``Hello''\autocite{ZimmermanTelegram}
 
 \pagestyle{headings}
 \newpage
