--- a/NM_History/The Zimmerman Telegram/The Zimmerman Telegram.tex
+++ b/NM_History/The Zimmerman Telegram/The Zimmerman Telegram.tex
@@ -1,20 +1,17 @@
 \documentclass[12pt]{article}
 \usepackage{lipsum}
 \usepackage{titling}
+\usepackage[hyphens]{url}
 \usepackage{hyperref}
-\usepackage[american]{babel} 
-\usepackage{csquotes} 
-\usepackage[style=mla-new]{biblatex}
+\usepackage{setspace}
 \usepackage[margin=1in]{geometry}
 
-\begin{filecontents}{bib.bib}
-@article{ZimmermanTelegram,
-    title = "The Zimmerman Telegram",
-    url = "https://www.archives.gov/education/lessons/zimmermann#:~:text=Espa%C3%B1ol,for%20joining%20the%20German%20cause",
+\hypersetup
+{
+    colorlinks=true,
+    linkcolor=blue,
+    urlcolor=blue,
 }
-\end{filecontents}
-
-\addbibresource{bib.bib} % you would use your own bib file here
 
 \newcommand{\PutTitle}[1]
 {
@@ -22,22 +19,38 @@
         {\huge\bfseries\thetitle}\\
         by \theauthor\\
         \thedate\\
-        #1        
+        #1
     \end{center}
     \hrule
     \vspace{2ex}
 }
 
 \begin{document}
-\title{The Zimmerman Telegram}
+\title{The Zimmermann Telegram}
+\author{Jonah Mondragon}
 \date{\today}
-\PutTitle{New Mexico History Period 4}
-
-As Test Subject \#1 says, ``Hello''\autocite{ZimmermanTelegram}
-
+\PutTitle{New Mexico History Period 3}
 \pagestyle{headings}
-\newpage
+\doublespacing
 
-\printbibliography
+The Zimmermann Telegram wasn't simply a telegram, but the notion of a message; how language can initiate action of any degree, in this case, the combustion of the gas that was WWI.
+German Minister Arthur Zimmerman used a telegram on January 17, 1917 to send a message to a German Embassy which was within Mexico, with the question of the alliance of Mexico against the United States.
+A relatively short period of time before, Mexico had just lost a considerable amount of land to the United States in after the
+\href{https://www.ourdocuments.gov/doc.php?flash=false&doc=26}{Treaty of Guadalupe Hidalgo}; and thus German forces saw this as an exploit for the advantage of reengaging their fight.
+
+Even though the United States wasn't involved in the war, she was still providing her British allies with materials required for battle.
+After an agreement on part of the German forces that submarine battle is a degree to severe to be fair; the German's started to hurt, submarine battle was their crutch, as such they disbanded their word and began to attack American harbor freight's, carrying goods for Britain, in an attempt to anguish British forces.
+
+
+\newpage
+\sloppy
+
+\section*{Sources\footnote{all websites were accessed at the date of this document.}}
+\begin{enumerate}
+    \item{\url{https://www.archives.gov/education/lessons/zimmermann#:~:text=Espa%C3%B1ol,for%20joining%20the%20German%20cause}}
+    \item{\url{https://www.historyextra.com/period/first-world-war/zimmermann-telegram-brought-america-us-into-ww1-code-breaking-signit-germany-mexico/}}
+    \item{\url{https://timesmachine.nytimes.com/timesmachine/1917/03/01/102318118.pdf}}
+    
+\end{enumerate}
 
 \end{document}
