--- a/NM_History/The Zimmerman Telegram/The Zimmerman Telegram.tex
+++ b/NM_History/The Zimmerman Telegram/The Zimmerman Telegram.tex
@@ -4,7 +4,11 @@
 \usepackage[hyphens]{url}
 \usepackage{hyperref}
 \usepackage{setspace}
+\usepackage[export]{adjustbox}
 \usepackage[margin=1in]{geometry}
+
+\setlength\paperwidth{8.5in}
+\setlength\paperheight{11in}
 
 \hypersetup
 {
@@ -34,23 +38,21 @@
 \doublespacing
 
 The Zimmermann Telegram wasn't simply a telegram, but the notion of a message; how language can initiate action of any degree, in this case, the combustion of the gas that was WWI.
-German Minister Arthur Zimmerman used a telegram on January 17, 1917 to send a message to a German Embassy which was within Mexico, with the question of the alliance of Mexico against the United States.
-A relatively short period of time before, Mexico had just lost a considerable amount of land to the United States in after the
-\href{https://www.ourdocuments.gov/doc.php?flash=false&doc=26}{Treaty of Guadalupe Hidalgo}; and thus German forces saw this as an exploit for the advantage of reengaging their fight.
+German Minister Arthur Zimmerman used a telegram on January 17, 1917 to send a message to a German Embassy which was within Mexico, with the question of the alliance between Germany and Mexico against the United States.
+A relatively short period of time before, Mexico had just lost a considerable amount of land to the United States after the
+    \href{https://www.ourdocuments.gov/doc.php?flash=false&doc=26}{Treaty of Guadalupe Hidalgo}; and thus German forces saw this as an exploit for the advantage of reengaging their fight.
 
-Even though the United States wasn't involved in the war, she was still providing her British allies with materials required for battle.
-After an agreement on part of the German forces that submarine battle is a degree to severe to be fair; the German's started to hurt, submarine battle was their crutch, as such they disbanded their word and began to attack American harbor freight's, carrying goods for Britain, in an attempt to anguish British forces.
-
+Even though the United States wasn't involved in the war, at the time, she was still providing her British allies with materials required for battle.
+After an agreement on part of the German forces that submarine battle is a degree to severe to be fair; the German's started to hurt, submarine battle was their crutch, as such they disbanded their word and began to attack American harbor freight's, which were carrying goods for Britain, by means of submarine, in an attempt to anguish British forces.
 
 \newpage
 \sloppy
 
-\section*{Sources\footnote{all websites were accessed at the date of this document.}}
+\section*{Sources\footnote{All websites were accessed at the date of this document.}}
 \begin{enumerate}
     \item{\url{https://www.archives.gov/education/lessons/zimmermann#:~:text=Espa%C3%B1ol,for%20joining%20the%20German%20cause}}
     \item{\url{https://www.historyextra.com/period/first-world-war/zimmermann-telegram-brought-america-us-into-ww1-code-breaking-signit-germany-mexico/}}
     \item{\url{https://timesmachine.nytimes.com/timesmachine/1917/03/01/102318118.pdf}}
-    
 \end{enumerate}
 
 \end{document}
