Added artifact collection images and description templates for the BINGO project.

--- a/English_I/BINGO Project/BINGO.tex
+++ b/English_I/BINGO Project/BINGO.tex
@@ -156,25 +156,63 @@ Create a dictionary with the following Academic Vocabulary:
 \end{multicols}
 }
 
-%\section{Artifact Collection}
-%These are eight artifacts that I believe to be essential to the plot of Romeo and Juliet; along with an explanation of each.
-%\begin{enumerate}
-    %\item{Masquerade Mask:}
-    %\item{Letter:}
-    %\item{Sword:}
-    %\item{Rope Ladder:}
-    %\item{Dagger:}
-    %\item{Vial of Poison:}
-    %\item{Herbs and Flowers:}
-    %\item{Juliet's Necklace:}\\ [-3ex]
-        %\begin{center}
-            %\includegraphics[max width=\textwidth - 6ex]{4k-3840-x-2160-wallpapers-themefoxx (772).jpg}
-        %\end{center}
-        %\paragraph~
-        %\lipsum[1]
-    %\item{{\color{blue}\underline{\href{https://www.youtube.com/watch?v=73lj5qJbrms}{All Together Now}}}:}
-%\end{enumerate}
+\section{Artifact Collection}
+These are eight artifacts that I believe to be essential to the plot of Romeo and Juliet; along with an explanation of each.
+\begin{enumerate}
+    \item{Letter:}
+        \begin{center}
+            \includegraphics[max width=\textwidth - 6ex]{pics/letter_to_juliet.jpg}
+        \end{center}
+        \paragraph~
+        \lipsum[1]
+    \item{Sword:}
+        \begin{center}
+            %\includegraphics[max width=\textwidth - 6ex]{pics/sword.jpg}
+            \includegraphics[max width=\textwidth - 6ex]{pics/necklace.jpg}
+        \end{center}
+        \paragraph~
+        \lipsum[1]
+    \item{Rope Ladder:}
+        \begin{center}
+            \includegraphics[max width=\textwidth - 6ex]{pics/rope_ladder.jpg}
+        \end{center}
+        \paragraph~
+        \lipsum[1]
+    \item{Dagger:}
+        \begin{center}
+            %\includegraphics[max width=\textwidth - 6ex]{pics/dagger.jpg}
+            \includegraphics[max width=\textwidth - 6ex]{pics/necklace.jpg}
+        \end{center}
+        \paragraph~
+        \lipsum[1]
+    \item{Vial of Poison:}
+        \begin{center}
+            \includegraphics[max width=\textwidth - 6ex]{pics/vial_of_poison.jpg}
+        \end{center}
+        \paragraph~
+        \lipsum[1]
+    \item{Herbs and Flowers:}
+        \begin{center}
+            \includegraphics[max width=\textwidth - 6ex]{pics/herbs_and_flowers.jpg}
+        \end{center}
+        \paragraph~
+        \lipsum[1]
+    \item{Juliet's Ring:}
+        \begin{center}
+            %\includegraphics[max width=\textwidth - 6ex]{pics/ring.jpg}
+            \includegraphics[max width=\textwidth - 6ex]{pics/necklace.jpg}
+        \end{center}
+        \paragraph~
+        \lipsum[1]
+    \item{Juliet's Necklace:}
+        \begin{center}
+            \includegraphics[max width=\textwidth - 6ex]{pics/necklace.jpg}
+        \end{center}
+        \paragraph~
+        \lipsum[1]
+    \item{{\color{blue}\underline{\href{https://www.youtube.com/watch?v=73lj5qJbrms}{All Together Now}}}:}
+\end{enumerate}
 
-%\section{Original Movie Poster}
+\section{Original Movie Poster}
 
 \end{document}
