BINGO artifact collection progress

--- a/English_I/BINGO Project/BINGO.tex
+++ b/English_I/BINGO Project/BINGO.tex
@@ -127,11 +127,11 @@ Create a dictionary with the following Academic Vocabulary:
     \headline{\sf{The feud of The Montague's and The Capulet's}}
     The only conflict which has plagued our fair city for centuries has been between the Montague's and the Capulet's; two well esteems lineages, with vast influences upon Verona. 
     Chief among these are the Capulet's ownership of Piazza Delle Erbe marketplace; making for an amiable nest egg. 
-    On the side of Mantague's, they only happen to own the Communal Palace, enough said.
+    On the side of Montague's, they only happen to own the Communal Palace, enough said.
     A recent development has put this age-long feud into a bit of a frenzy.
     Tybalt of the Capulet family, a man whom we haven't much information;\footnote{
         In our attempts to facilitate questions of his stature within the Capulet family, Tybalt managed to evade our every request in a rather amazing fashion; involving showing off several disguises of great dexterity and fashionable uses of his sword.}
-        was recently killed by Romeo of the Mantague family, surely extenuating the tension of the two families.
+        was recently killed by Romeo of the Montague family, surely extenuating the tension of the two families.
     To an utter astonishment, the punishment of this crime was not administered to be death, as is usual for the pretense of murder, but rather banishment;
         this was due to the direct manipulation of the Prince, at who's words resulted in the immediate departure of Romeo, he hasn't been seen since.
     This occurrence can only lead to more brutality on both sides of the spectrum; there's speculation that this wasn't an unprovoked attack, that Tybalt had insinuated the situation; of course speculation also lies in the other direction as well.
@@ -157,21 +157,35 @@ Create a dictionary with the following Academic Vocabulary:
 }
 
 \section{Artifact Collection}
-These are eight artifacts that I believe to be essential to the plot of Romeo and Juliet; along with an explanation of each.
+These are eight artifacts that I believe to be essential to the plot of Romeo and Juliet; along with a brief explanation of each.
 \begin{enumerate}
-    \item{Letter:}
+    \item{Letter:}\label{letter_to_romeo}
         \begin{center}
-            \includegraphics[max width=\textwidth - 6ex]{pics/letter_to_juliet.jpg}
+            %\includegraphics[max width=\textwidth - 6ex]{pics/letter_to_romeo.jpg}
+            \includegraphics[max width=\textwidth - 6ex]{pics/dunce.jpg}
         \end{center}
         \paragraph~
-        \lipsum[1]
+        This is the letter that Friar Lawrence was tasked with giving to Romeo; explaining the plan for Romeo and Juliet to escape Verona together.
+        Implications of this letter are what make up the tragedy of this story; had this letter succeeded in getting to Romeo, he would have been aware of the plan.
+        This aforementioned plan went like this; Juliet would indulge herself with an amalgamated liquid (see artifact \#\ref{vial_of_poison}) made by Friar Lawrence making her appear dead;
+            then allowing her an escape from Verona and a reunition with Romeo in Mantua.
+    \item{Vial of Poison:}\label{vial_of_poison}
+        \begin{center}
+            \includegraphics[max width=\textwidth - 6ex]{pics/vial_of_poison.jpg}
+        \end{center}
+        \paragraph~
+        Having mentioned the letter to Romeo, at artifact \#\ref{letter_to_romeo}, it becomes pertinent to mention the vial of poison of which the letter-described plan involved.
+        This concoction, amalgamated by Friar Lawrence, has the effect of immobilizing its drinker to the point of perceived death, a notion which lasts for forty-eight hours before the drinker then wakes up.
+        Use of this concoction was meant for Juliet, with an effort of convincing her family she has died as to enable her to run off with Romeo to Mantua.
     \item{Sword:}
         \begin{center}
-            %\includegraphics[max width=\textwidth - 6ex]{pics/sword.jpg}
-            \includegraphics[max width=\textwidth - 6ex]{pics/necklace.jpg}
+            \includegraphics[max width=\textwidth - 6ex]{pics/sword.jpg}
         \end{center}
         \paragraph~
-        \lipsum[1]
+        Use of swords is a major writing point in Romeo and Juliet owing to the time of it's inscription; sword-play made the heart of any sort of combat, with several manipulations of them, as devices, spaced throughout the play.
+        Two examples of these aforementioned manipulations are in Act I Scene I in which the Montague and Capulet feud is introduced through the drawing of several swords during an altercation;
+            another is the fight between Tybalt and Romeo; the latter being pertinent to my choice of this item.
+        The fight between 
     \item{Rope Ladder:}
         \begin{center}
             \includegraphics[max width=\textwidth - 6ex]{pics/rope_ladder.jpg}
@@ -180,14 +194,7 @@ These are eight artifacts that I believe to be essential to the plot of Romeo an
         \lipsum[1]
     \item{Dagger:}
         \begin{center}
-            %\includegraphics[max width=\textwidth - 6ex]{pics/dagger.jpg}
-            \includegraphics[max width=\textwidth - 6ex]{pics/necklace.jpg}
-        \end{center}
-        \paragraph~
-        \lipsum[1]
-    \item{Vial of Poison:}
-        \begin{center}
-            \includegraphics[max width=\textwidth - 6ex]{pics/vial_of_poison.jpg}
+            \includegraphics[max width=\textwidth - 6ex]{pics/dagger.jpg}
         \end{center}
         \paragraph~
         \lipsum[1]
@@ -200,7 +207,7 @@ These are eight artifacts that I believe to be essential to the plot of Romeo an
     \item{Juliet's Ring:}
         \begin{center}
             %\includegraphics[max width=\textwidth - 6ex]{pics/ring.jpg}
-            \includegraphics[max width=\textwidth - 6ex]{pics/necklace.jpg}
+            \includegraphics[max width=\textwidth - 6ex]{pics/dunce.jpg}
         \end{center}
         \paragraph~
         \lipsum[1]
@@ -211,8 +218,11 @@ These are eight artifacts that I believe to be essential to the plot of Romeo an
         \paragraph~
         \lipsum[1]
     \item{{\color{blue}\underline{\href{https://www.youtube.com/watch?v=73lj5qJbrms}{All Together Now}}}:}
+        \begin{center}
+            \includegraphics[max width=\textwidth - 6ex]{pics/all_together_now.jpg}
+        \end{center}
 \end{enumerate}
 
-\section{Original Movie Poster}
+%\section{Original Movie Poster}
 
 \end{document}
