Artifact Collection Progress

--- a/English_I/BINGO Project/BINGO.tex
+++ b/English_I/BINGO Project/BINGO.tex
@@ -35,7 +35,9 @@
     urlcolor=blue,
 }
 
-\title{BINGO Project \#3}
+\graphicspath{{pics/}}
+
+\title{BINGO Project \#4}
 \author{Jonah Mondragon}
 \date{\today}
 
@@ -157,12 +159,15 @@ Create a dictionary with the following Academic Vocabulary:
 }
 
 \section{Artifact Collection}
-These are eight artifacts that I believe to be essential to the plot of Romeo and Juliet; along with a brief explanation of each.
+These are eight artifacts that I believe to be essential to the ideology of Romeo and Juliet; along with a brief explanation of each.
+Unfortunately, I was unable to arrange these artifacts into any sort of container, as I couldn't find one large enough to hold a rope ladder and a sword, so hopefully my desktop will suffice.
+The paragraph's describing each artifact are present alongside an individual image of them; \#\ref{all_together_now} is an image of all the artifacts together.
+I've included my signature in all of the pictures so as to reassure my genuine collection of these artifacts:
 \begin{enumerate}
-    \item{Letter:}\label{letter_to_romeo}
+    \item{Letter to Romeo:}\label{letter_to_romeo}
         \begin{center}
-            %\includegraphics[max width=\textwidth - 6ex]{pics/letter_to_romeo.jpg}
-            \includegraphics[max width=\textwidth - 6ex]{pics/dunce.jpg}
+            %\includegraphics[max width=\textwidth - 6ex]{letter_to_romeo}
+            \includegraphics[max width=\textwidth - 6ex]{dunce}
         \end{center}
         \paragraph~
         This is the letter that Friar Lawrence was tasked with giving to Romeo; explaining the plan for Romeo and Juliet to escape Verona together.
@@ -171,55 +176,74 @@ These are eight artifacts that I believe to be essential to the plot of Romeo an
             then allowing her an escape from Verona and a reunition with Romeo in Mantua.
     \item{Vial of Poison:}\label{vial_of_poison}
         \begin{center}
-            \includegraphics[max width=\textwidth - 6ex]{pics/vial_of_poison.jpg}
+            \includegraphics[max width=\textwidth - 6ex]{vial_of_poison}
         \end{center}
         \paragraph~
         Having mentioned the letter to Romeo, at artifact \#\ref{letter_to_romeo}, it becomes pertinent to mention the vial of poison of which the letter-described plan involved.
         This concoction, amalgamated by Friar Lawrence, has the effect of immobilizing its drinker to the point of perceived death, a notion which lasts for forty-eight hours before the drinker then wakes up.
         Use of this concoction was meant for Juliet, with an effort of convincing her family she has died as to enable her to run off with Romeo to Mantua.
-    \item{Sword:}
+        As we later find out, we haven't read up to this point as a class at the time of this writing, this potion is a little too effective and can be attributed to the tragedy of Romeo and Juliet.
+    \item{Romeo's Sword:}\label{sword}
         \begin{center}
-            \includegraphics[max width=\textwidth - 6ex]{pics/sword.jpg}
+            \includegraphics[max width=\textwidth - 6ex]{sword}
         \end{center}
         \paragraph~
-        Use of swords is a major writing point in Romeo and Juliet owing to the time of it's inscription; sword-play made the heart of any sort of combat, with several manipulations of them, as devices, spaced throughout the play.
-        Two examples of these aforementioned manipulations are in Act I Scene I in which the Montague and Capulet feud is introduced through the drawing of several swords during an altercation;
-            another is the fight between Tybalt and Romeo; the latter being pertinent to my choice of this item.
-        The fight between 
+        Use of swords is a major writing point in Romeo and Juliet owing to the time of it's inscription; sword-play was the primary device of any altercation throughout.
+        Two examples of these manipulations, of swords as devices; \textit{Act I Scene I} in which the Montague and Capulet feud is introduced through the drawing of several swords during an altercation;
+            \textit{Act III Scene I} which is the fight between Tybalt and Romeo; the latter being pertinent to my choice of this item.
+        The fight between Tybalt and Romeo is pivotal to the plot, the upshot is Romeo becomes ``banishèd,'' archaic spelling I'm sure, after killing Tybalt with a sword;
+            without the presence of this altercation, there would be no need for Romeo and Juliet to flee from Verona; no mix-up with the vial of poison.
+        The sword in the image above represents the one Romeo wielded throughout the play.
+    \newpage
+    \item{Romeo's Dagger:}
+        \begin{center}
+            \includegraphics[max width=\textwidth - 6ex]{dagger}
+        \end{center}
+        \paragraph~
+        Seeing as \#\ref{sword} presents Romeo's sword, it seems only natural to present his dagger immediately afterward.
+        This is the dagger Juliet keeps with her in bed during \textit{Act IV}, and ultimately kills herself with in \textit{Act V}.
+        As well as with swords, daggers are used as an altercation alleviation device throughout Romeo and Juliet.
+        While only a few characters (Romeo, Juliet, Lord Capulet, Peter, and two extra musicians) ever interact with a dagger, whether verbally or 
+            physically, it's purpose is definite as it's use regarding Juliet.
     \item{Rope Ladder:}
         \begin{center}
-            \includegraphics[max width=\textwidth - 6ex]{pics/rope_ladder.jpg}
+            \includegraphics[max width=\textwidth - 6ex]{rope_ladder}
         \end{center}
         \paragraph~
-        \lipsum[1]
-    \item{Dagger:}
-        \begin{center}
-            \includegraphics[max width=\textwidth - 6ex]{pics/dagger.jpg}
-        \end{center}
-        \paragraph~
-        \lipsum[1]
+        A rope ladder makes an appearance in \textit{Act III Scene III} during an exchange involving Juliet and the Nurse; Nurse was bringing it for Romeo's use as an entrance device for Romeo and Juliet's wedding night.
+        The pertinence of a rope ladder to the plot is, while weak, relatively simple; it represents the means by which the supposed wedding would initiate had the fight between Tybalt and Romeo not occurred (see artifact \#\ref{sword}).
+        The rope ladder in the image above is meant to represent the same one that was to be used by Romeo during \textit{Act III Scene III}.
+    \newpage
     \item{Herbs and Flowers:}
         \begin{center}
-            \includegraphics[max width=\textwidth - 6ex]{pics/herbs_and_flowers.jpg}
+            \includegraphics[max width=\textwidth - 6ex]{herbs_and_flowers}
         \end{center}
         \paragraph~
-        \lipsum[1]
+        Herbs and flowers make their only appearance in \textit{Act II Scene III} in a metaphor for human behavior.
+        In this aforementioned scene, Friar Lawrence describes both ``man as well as herbs'' as being ``naught so vile'' as well as ``Nor aught so good,'' describing the struggle of good and evil with humans; the metatphor relating to the properties of 
+            herbs and flowers as being either poisonous or liberating.
+        This metaphor has pertinence to the plot, again an admittedly weak pertinence, because of the Montague and Capulet feud; which is good and which is evil?
+        Naught can tell.
     \item{Juliet's Ring:}
         \begin{center}
-            %\includegraphics[max width=\textwidth - 6ex]{pics/ring.jpg}
-            \includegraphics[max width=\textwidth - 6ex]{pics/dunce.jpg}
+            %\includegraphics[max width=\textwidth - 6ex]{ring}
+            \includegraphics[max width=\textwidth - 6ex]{dunce}
         \end{center}
         \paragraph~
-        \lipsum[1]
+        The ring depicted above is meant to be Juliet's ring (which first appears in \textit{Act III Scene III}).
+        This ring was to be given to Romeo by way of the Nurse after the death of Tybalt; meant as a remembrance of their love.
+        After Juliet's death, Romeo takes her ring from her body, a final act of nihilism regarding her life.
+    \newpage
     \item{Juliet's Necklace:}
         \begin{center}
-            \includegraphics[max width=\textwidth - 6ex]{pics/necklace.jpg}
+            \includegraphics[max width=\textwidth - 6ex]{necklace}
         \end{center}
         \paragraph~
-        \lipsum[1]
-    \item{{\color{blue}\underline{\href{https://www.youtube.com/watch?v=73lj5qJbrms}{All Together Now}}}:}
+        My reason for this choice is rather dense; it boils down to a peice of jewlery that isn't exaclt referenced in the play, but is referenced in the movie (\href{https://www.boxofficemojo.com/release/rl2305590785/weekend/}{Romeo + Juliet}).
+    \item{{\color{blue}\underline{\href{https://www.youtube.com/watch?v=73lj5qJbrms}{All Together Now}}}:}\label{all_together_now}
         \begin{center}
-            \includegraphics[max width=\textwidth - 6ex]{pics/all_together_now.jpg}
+            %\includegraphics[max width=\textwidth - 6ex]{all_together_now}
+            \includegraphics[max width=\textwidth - 6ex]{dunce}
         \end{center}
 \end{enumerate}
 
