Artifact Collection: just need the proper pictures now

--- a/English_I/BINGO Project/BINGO.tex
+++ b/English_I/BINGO Project/BINGO.tex
@@ -174,6 +174,7 @@ I've included my signature in all of the pictures so as to reassure my genuine c
         Implications of this letter are what make up the tragedy of this story; had this letter succeeded in getting to Romeo, he would have been aware of the plan.
         This aforementioned plan went like this; Juliet would indulge herself with an amalgamated liquid (see artifact \#\ref{vial_of_poison}) made by Friar Lawrence making her appear dead;
             then allowing her an escape from Verona and a reunition with Romeo in Mantua.
+    \newpage
     \item{Vial of Poison:}\label{vial_of_poison}
         \begin{center}
             \includegraphics[max width=\textwidth - 6ex]{vial_of_poison}
@@ -194,7 +195,6 @@ I've included my signature in all of the pictures so as to reassure my genuine c
         The fight between Tybalt and Romeo is pivotal to the plot, the upshot is Romeo becomes ``banishèd,'' archaic spelling I'm sure, after killing Tybalt with a sword;
             without the presence of this altercation, there would be no need for Romeo and Juliet to flee from Verona; no mix-up with the vial of poison.
         The sword in the image above represents the one Romeo wielded throughout the play.
-    \newpage
     \item{Romeo's Dagger:}
         \begin{center}
             \includegraphics[max width=\textwidth - 6ex]{dagger}
@@ -204,7 +204,7 @@ I've included my signature in all of the pictures so as to reassure my genuine c
         This is the dagger Juliet keeps with her in bed during \textit{Act IV}, and ultimately kills herself with in \textit{Act V}.
         As well as with swords, daggers are used as an altercation alleviation device throughout Romeo and Juliet.
         While only a few characters (Romeo, Juliet, Lord Capulet, Peter, and two extra musicians) ever interact with a dagger, whether verbally or 
-            physically, it's purpose is definite as it's use regarding Juliet.
+            physically, it's purpose is definite because of it's use regarding Juliet.
     \item{Rope Ladder:}
         \begin{center}
             \includegraphics[max width=\textwidth - 6ex]{rope_ladder}
@@ -220,7 +220,7 @@ I've included my signature in all of the pictures so as to reassure my genuine c
         \end{center}
         \paragraph~
         Herbs and flowers make their only appearance in \textit{Act II Scene III} in a metaphor for human behavior.
-        In this aforementioned scene, Friar Lawrence describes both ``man as well as herbs'' as being ``naught so vile'' as well as ``Nor aught so good,'' describing the struggle of good and evil with humans; the metatphor relating to the properties of 
+        In this aforementioned scene, Friar Lawrence describes both ``man as well as herbs'' as being ``naught so vile'' as well as ``Nor aught so good,'' describing the struggle of good and evil with humans; the metaphor relating to the properties of 
             herbs and flowers as being either poisonous or liberating.
         This metaphor has pertinence to the plot, again an admittedly weak pertinence, because of the Montague and Capulet feud; which is good and which is evil?
         Naught can tell.
@@ -239,7 +239,10 @@ I've included my signature in all of the pictures so as to reassure my genuine c
             \includegraphics[max width=\textwidth - 6ex]{necklace}
         \end{center}
         \paragraph~
-        My reason for this choice is rather dense; it boils down to a peice of jewlery that isn't exaclt referenced in the play, but is referenced in the movie (\href{https://www.boxofficemojo.com/release/rl2305590785/weekend/}{Romeo + Juliet}).
+        My reason for this choice is rather dense; it boils down to religious imagery; a necklace also isn't ever directly referenced in the play, but is referenced in the movie 
+        ({\color{blue}\underline{\href{https://www.boxofficemojo.com/release/rl2305590785/weekend/}{Romeo + Juliet}}}).
+        The actual necklace used in the movie has a cross attached to it, I could not procure a necklace of this nature, relating to the religious imagery presented throughout.
+        A few of these religious references are predominately present in the original marriage scene (\textit{Act II Scene V}); details of which are too verbose to be detailed.
     \item{{\color{blue}\underline{\href{https://www.youtube.com/watch?v=73lj5qJbrms}{All Together Now}}}:}\label{all_together_now}
         \begin{center}
             %\includegraphics[max width=\textwidth - 6ex]{all_together_now}
