Started Rout 66 quiz

--- a/NM_History/Route 66 Test/Route 66 Test.tex
+++ b/NM_History/Route 66 Test/Route 66 Test.tex
@@ -41,12 +41,18 @@
 \begin{enumerate}
     \item{\textit{Route 66 ran between which two United States cities and states?}}
         \begin{addmargin}[24pt]{0in}
+            Route 66 ran between St. Louis, Missouri and Chicago, Illinois.
         \end{addmargin}
     \item{\textit{What is the name of the famous motel on Rt. 66 in Tucumcari, New Mexico, that is known for its neon sign? Tucumcari Tonight!}}
         \begin{addmargin}[24pt]{0in}
+            The name of the famous motel on Rt. 66, in Tucumcari, New Mexico; is \textit{Blue Swallow Motel}.
         \end{addmargin}
     \item{\textit{2 Part Question: Which Avenue in Albuquerque today used to be Rt. 66? And which Interstate Highway that goes through New Mexico now took over Rt. 66's route?}}
         \begin{addmargin}[24pt]{0in}
+            \begin{itemize}
+                \item{The avenue of Albuquerque, today, that used to by Rt. 66 is Central Avenue.}
+                \item{}
+            \end{itemize}
         \end{addmargin}
     \item{\textit{Which New Mexico city gets a shout out in (Get Your Kicks on) Rt. 66?}}
         \begin{addmargin}[24pt]{0in}
