Started Rout 66 quiz

--- a/NM_History/Route 66 Test/Route 66 Test.tex
+++ b/NM_History/Route 66 Test/Route 66 Test.tex
@@ -51,7 +51,7 @@
         \begin{addmargin}[24pt]{0in}
             \begin{itemize}
                 \item{The avenue of Albuquerque, today, that used to by Rt. 66 is Central Avenue.}
-                \item{}
+                \item{Five interstate highways replaced route 66; I-55 from Chicago; I-44; I-40; I-15; I-10.}
             \end{itemize}
         \end{addmargin}
     \item{\textit{Which New Mexico city gets a shout out in (Get Your Kicks on) Rt. 66?}}
