Completed Route 66 test

--- a/NM_History/Route 66 Test/Route 66 Test.tex
+++ b/NM_History/Route 66 Test/Route 66 Test.tex
@@ -56,32 +56,60 @@
         \end{addmargin}
     \item{\textit{Which New Mexico city gets a shout out in (Get Your Kicks on) Rt. 66?}}
         \begin{addmargin}[24pt]{0in}
+            Gallup, New Mexico is mentioned in the song {\color{blue}\underline{\href{https://www.youtube.com/watch?v=9nuDE1SJlPo}{\textit{(Get Your Kicks On) Route 66}}}}.
         \end{addmargin}
     \item{\textit{Which New Mexico town was NOT on Rt. 66?}}
         \begin{addmargin}[24pt]{0in}
+            Hatch, New Mexico is a town NOT along Route 66.
         \end{addmargin}
     \item{\textit{Originally, from 1926 to 1937, why did Rt. 66 go through Santa Fe?}}
         \begin{addmargin}[24pt]{0in}
+            Previous New Mexican governor {\color{blue}\underline{\href{https://www.nga.org/governor/arthur-thomas-hannett/}{Arthur. T. Hannett}}} lost his re-election; as a spite method against other New Mexican politicians, he decided to reroute Route 66 to go through
+               Albuquerque instead of Santa Fe.
+            This undertaking was initiated so late during his position as governor that it was only bad weather that prevented Hannett's successor from stopping the reroute; it was impossible to get into contact with the crew.
+            (See source \#\ref{reroute})
         \end{addmargin}
     \item{\textit{First, next to railroad stations and then later on Rt. 66, Fred Harvey opened America's first chain restaurants and hotels, which were called?}}
         \begin{addmargin}[24pt]{0in}
+            America's first chain of restaurants and hotels were called \textit{Harvey Houses}.
         \end{addmargin}
     \item{\textit{In the late 1930s a lot of 'Okies' from Oklahoma passed through New Mexico on Rt. 66 to get to California during what environmental disaster?}}
         \begin{addmargin}[24pt]{0in}
+            {\color{blue}\underline{\href{https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4015056/}{The Dust Bowl}}} was an environmental disaster that forced ``Okies'' to migrate, through New Mexico, to California; during the late 1930's.
         \end{addmargin}
     \item{\textit{What famous hotel in Gallup, which is still open today, was where many movie stars stayed when they were filming Westerns in New Mexico?  Bonus points: Name 3 famous actors who stayed there?}}
         \begin{addmargin}[24pt]{0in}
+            {\color{blue}\underline{\href{https://www.nps.gov/nr/travel/route66/el_rancho_hotel_gallup.html}{El Rancho Hotel}}} is a hotel that many movie stars stayed at while filming Westerns in New Mexico.
+            Three of the famous actors that have stayed in the El Rancho Hotel are; {\color{blue}\underline{\href{https://www.johnwayne.com/}{John Wayne}}}; 
+                {\color{blue}\underline{\href{https://www.biography.com/actor/katharine-hepburn}{Katherine Hepburn}}}; {\color{blue}\underline{\href{https://www.newworldencyclopedia.org/entry/Spencer_Tracy}{Spencer Tracy}}}.
         \end{addmargin}
     \item{\textit{Segments of Rt. 66 are still alive! On a stretch in the mountains on the Eastside of Albuquerque, if you drive your car at 45 MPH over some grooves in the road, which song can be heard?}}
         \begin{addmargin}[24pt]{0in}
+            Driving at 45mph on a specific stretch of Route 66, a part that still exists today; the driver can hear the tune of {\color{blue}\underline{\href{https://www.youtube.com/watch?v=TRUjr8EVgBg}{America the Beautiful}}}.
         \end{addmargin}
 \end{enumerate}
 
 \newpage
 
-\section*{Sources\footnote{All sources were accessed at the date of the document.}}
+\section*{Sources\footnote{All sources were accessed at the date of this document.}}
+\subsection*{External Information}
 \begin{enumerate}
     \item{\url{https://getaway.10best.com/13451472/where-does-route-66-start-and-end}}
+    \item{\url{https://www.theroute-66.com/towns.html}}
+    \item{\url{https://www.theroadwanderer.net/66NMex/santafe.htm}}\label{reroute}
+    \item{\url{https://www.okhistory.org/publications/enc/entry.php?entry=OK008}}
+    \item{\url{https://abcnews.go.com/blogs/headlines/2014/10/route-66-adds-singing-road-as-speeding-deterrent/}}
+\end{enumerate}
+\subsection*{Hyperlinks (In order of appearance)\footnote{Hyperlinks are the blue clickable text seen throughout this document; but that aren't directly written as a web address.}}
+\begin{enumerate}
+    \item{\url{https://www.youtube.com/watch?v=9nuDE1SJlPo}}
+    \item{\url{https://www.nga.org/governor/arthur-thomas-hannett/}}
+    \item{\url{https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4015056/}}
+    \item{\url{https://www.nps.gov/nr/travel/route66/el_rancho_hotel_gallup.html}}
+    \item{\url{https://www.johnwayne.com/}}
+    \item{\url{https://www.biography.com/actor/katharine-hepburn}}
+    \item{\url{https://www.newworldencyclopedia.org/entry/Spencer_Tracy}}
+    \item{\url{https://www.youtube.com/watch?v=TRUjr8EVgBg}}
 \end{enumerate}
 
 \end{document}
