--- a/English_I/BINGO Project/BINGO.tex
+++ b/English_I/BINGO Project/BINGO.tex
@@ -166,8 +166,8 @@ I've included my signature in all of the pictures so as to reassure my genuine c
 \begin{enumerate}
     \item{Letter to Romeo:}\label{letter_to_romeo}
         \begin{center}
-            %\includegraphics[max width=\textwidth - 6ex]{letter_to_romeo}
-            \includegraphics[max width=\textwidth - 6ex]{dunce}
+            \includegraphics[max width=\textwidth - 6ex]{letter_to_romeo}
+            %\includegraphics[max width=\textwidth - 6ex]{dunce}
         \end{center}
         \paragraph~
         This is the letter that Friar Lawrence was tasked with giving to Romeo; explaining the plan for Romeo and Juliet to escape Verona together.
@@ -226,8 +226,8 @@ I've included my signature in all of the pictures so as to reassure my genuine c
         Naught can tell.
     \item{Juliet's Ring:}
         \begin{center}
-            %\includegraphics[max width=\textwidth - 6ex]{ring}
-            \includegraphics[max width=\textwidth - 6ex]{dunce}
+            \includegraphics[max width=\textwidth - 6ex]{ring}
+            %\includegraphics[max width=\textwidth - 6ex]{dunce}
         \end{center}
         \paragraph~
         The ring depicted above is meant to be Juliet's ring (which first appears in \textit{Act III Scene III}).
@@ -245,8 +245,8 @@ I've included my signature in all of the pictures so as to reassure my genuine c
         A few of these religious references are predominately present in the original marriage scene (\textit{Act II Scene V}); details of which are too verbose to be detailed.
     \item{{\color{blue}\underline{\href{https://www.youtube.com/watch?v=73lj5qJbrms}{All Together Now}}}:}\label{all_together_now}
         \begin{center}
-            %\includegraphics[max width=\textwidth - 6ex]{all_together_now}
-            \includegraphics[max width=\textwidth - 6ex]{dunce}
+            \includegraphics[max width=\textwidth - 6ex]{all_together_now}
+            %\includegraphics[max width=\textwidth - 6ex]{dunce}
         \end{center}
 \end{enumerate}
 
