--- a/NM_History/the_manhatten_project/the_manhatten_project.tex
+++ b/NM_History/the_manhatten_project/the_manhatten_project.tex
@@ -43,7 +43,10 @@ The Manhattan Project was a research project conducted primarily by the U.S. gov
 The project initiated as a result of Otto Hahn and Fritz Strassmann's accidental discovery of {\color{blue}\underline{\href{http://nuclearconnect.org/know-nuclear/science/nuclear-fission}{nuclear fission}}},
     which prompted {\color{blue}\underline{\href{https://www.nobelprize.org/prizes/physics/1921/einstein/biographical/}{Albert Einstein}}} and {\color{blue}\underline{\href{https://www.jewishvirtuallibrary.org/leo-szilard}{Leo Szilard}}} to send a 
     {\color{blue}\underline{\href{https://www.osti.gov/opennet/manhattan-project-history/Events/1939-1942/einstein_letter.htm}{letter}}} to Franklin D. Roosevelt discussing the possibility of nuclear energy/bombs.
-The name \textit{Manhattan Project} is considerably a misnomer as the project took place in Las Cruces, New Mexico; even so, it was started in <city name>
+The name \textit{Manhattan Project} is considerably a misnomer as the project took place in Las Cruces, New Mexico; it was started in Manhattan, at 270 Broadway.
+
+Having the possibility of nuclear warefare was a notion much too devastating to ignore.
+Pearl Harbor was attacked, without provocation, on December 7, 1941; which prompted the U.S. to put into action the produce of The Manhattan Project, a nuclear
 
 \newpage
 
@@ -52,6 +55,8 @@ The name \textit{Manhattan Project} is considerably a misnomer as the project to
 \begin{enumerate}
     \item{\url{https://www.atomicheritage.org/history/manhattan-project}}
     \item{\url{https://www.history.com/topics/world-war-ii/the-manhattan-project}}
+    \item{\url{https://coastguard.dodlive.mil/2017/12/the-long-blue-line-the-attack-on-pearl-harbor-a-date-that-will-live-in-infamy/}}
+    \item{\url{https://books.google.com/books?id=l-FNnwEACAAJ}}
 \end{enumerate}
 
 \subsection*{Hyperlinks}
